--- a/src/common/index.css
+++ b/src/common/index.css
@@ -739,7 +739,7 @@ header {
   justify-content: space-around;
   width: 300px;
   height:auto;
-  position: absolute;
+  position: fixed;
   top: 75px;
   right: -30%;
   /* height: 300px; */
@@ -749,7 +749,7 @@ header {
   background-color: white;
   opacity: 0;
   transition: all 400ms;
-  z-index: 100;
+  z-index: 10000;
 }
 .cart-box.cart-box-toggle {
   right: 1%;
