--- a/src/common/shoppingCart.css
+++ b/src/common/shoppingCart.css
@@ -80,7 +80,45 @@
     position: sticky;
     top: 1rem;
   }
-  
+
+
+
+  /* Style the button */
+.save-cart-btn {
+  background-color: #F2E1D9;/* Green background */
+  color: rgb(0, 0, 0); /* White text */
+  border: none; /* No border */
+  padding: 3px 6px; /* Padding for size */
+  text-align: center; /* Center the text */
+  text-decoration: none; /* No underline */
+  display: inline-block; /* Align with other elements if necessary */
+  font-size: 12px; /* Font size */
+  border-radius: 5px; /* Rounded corners */
+  cursor: pointer; /* Change cursor on hover */
+  transition: all 0.3s ease; /* Smooth transition for effects */
+  font-weight: bold;
+}
+
+/* Add a hover effect */
+.save-cart-btn:hover {
+  background-color: #ff6600;
+  color: #e0e0e0; /* Darker green on hover */
+  transform: translateY(-2px); /* Slight lift effect */
+  font-weight:bold ;
+}
+
+/* Focus and active state */
+.save-cart-btn:focus, .save-cart-btn:active {
+  outline: none; /* Remove default outline */
+  box-shadow: 0 0 5px rgba(72, 201, 116, 0.5); /* Subtle shadow effect */
+}
+
+
+.disabled {
+  pointer-events: none;
+  background-color: #e4dedd;   /* Prevents clicking */
+  opacity: 0.8;           /* Makes it look visually disabled */
+}
 
 
 
